# claude-memory-manager-daemon

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  package.json  tsconfig.json
.claude/: settings.json
.claude/agents/: memory-manager.md
.claude/skills/memory-audit/: SKILL.md
.claude/skills/memory-organize/: SKILL.md
.claude/skills/memory-prune/: SKILL.md
.claude/skills/process-janitor/: SKILL.md
.github/workflows/: ci.yml  sandbox-tick.yml
.omx/state/active-sessions/: mcp-1021364.json  mcp-1755024.json  mcp-2076519.json  mcp-2228002.json  mcp-2774899.json  mcp-427793.json  mcp-672577.json
mcp/: process-server.ts
scripts/: install-desktop.sh  install-systemd.sh  start.sh  status.sh  stop.sh  test-tick.sh
src/: audit.rs  authmux.rs  config.rs  daemon.ts  history.rs  ipc.rs  janitor.rs  lib.rs  main.rs  memory.rs  metrics.rs  orphan_node.rs  pressure.rs  process.rs  state.rs  tick.rs  tmux_janitor.rs  webhook.rs
systemd/: claude-memory-manager.service
test-fixtures/memory/: MEMORY.md  broken_frontmatter.md  duplicate_a.md  duplicate_b.md  feedback_db_mocking.md  feedback_missing_why.md  project_stale_tool.md  reference_linear.md  user_role.md
