[package]
name    = "claude-memory-manager-daemon"
version = "0.1.0"
edition = "2021"
description = "Long-running Rust daemon that tends the Claude file-based memory lane and surfaces authmux login state."
license = "MIT"
repository = "https://github.com/recodeee/claude-memory-manager-daemon"

[[bin]]
name = "cmmd"
path = "src/main.rs"

[[bin]]
name = "mmctl"
path = "src/bin/mmctl.rs"

[dependencies]
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "io-util", "net", "signal", "time", "sync"] }
anyhow             = "1"
thiserror          = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4", features = ["derive", "env"] }
sysinfo            = "0.30"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
dotenvy            = "0.15"
nix                = { version = "0.27", features = ["signal", "process"] }
walkdir            = "2"

[profile.release]
opt-level = 3
lto       = "thin"
strip     = true
panic     = "abort"
codegen-units = 1
